// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oasOpParams Error if both in:formData and in:body 1`] = `
Array [
  Object {
    "code": "operation-parameters",
    "message": "Operation cannot have both \`in:body\` and \`in:formData\` parameters.

Parameters found at:
[ \`paths\`, \`/foo\`, \`get\`, \`0\` ]
[ \`paths\`, \`/foo\`, \`get\`, \`1\` ]
",
    "path": Array [
      "paths",
      "/foo",
      "get",
    ],
    "severity": 1,
    "source": undefined,
    "summary": "Operation parameters are unique and non-repeating.",
  },
]
`;

exports[`oasOpParams Error if multiple in:body 1`] = `
Array [
  Object {
    "code": "operation-parameters",
    "message": "Operation has multiple instances of the \`in:body\` parameter.

Parameters found at:
",
    "path": Array [
      "paths",
      "/foo",
      "get",
    ],
    "severity": 1,
    "source": undefined,
    "summary": "Operation parameters are unique and non-repeating.",
  },
]
`;

exports[`oasOpParams Error if non-unique $ref param on same operation 1`] = `
Array [
  Object {
    "code": "operation-parameters",
    "message": "Operations must have unique \`name\` + \`in\` parameters.
Repeats of \`in:query\` + \`name:foo\`

Parameters found at:
[ \`paths\`, \`/foo\`, \`get\`, \`0\` ]
[ \`paths\`, \`/foo\`, \`get\`, \`1\` ]
[ \`paths\`, \`/foo\`, \`get\`, \`2\` ]
",
    "path": Array [
      "paths",
      "/foo",
      "get",
    ],
    "severity": 1,
    "source": undefined,
    "summary": "Operation parameters are unique and non-repeating.",
  },
]
`;

exports[`oasOpParams Error if non-unique param on same operation 1`] = `
Array [
  Object {
    "code": "operation-parameters",
    "message": "Operations must have unique \`name\` + \`in\` parameters.
Repeats of \`in:query\` + \`name:foo\`

Parameters found at:
[ \`paths\`, \`/foo\`, \`get\`, \`0\` ]
[ \`paths\`, \`/foo\`, \`get\`, \`1\` ]
[ \`paths\`, \`/foo\`, \`get\`, \`2\` ]
",
    "path": Array [
      "paths",
      "/foo",
      "get",
    ],
    "severity": 1,
    "source": undefined,
    "summary": "Operation parameters are unique and non-repeating.",
  },
]
`;
